--- a/alembic.ini
+++ b/alembic.ini
@@ -63,8 +63,8 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://princeak@localhost/powerGrid
-# sqlalchemy.url = postgresql://princeak:dRKH5CsZC6Lm4RMggNkjmkr79g25T23u@dpg-d0cacsi4d50c73but2tg-a/powergrid
+# sqlalchemy.url = postgresql://princeak@localhost/powerGrid
+sqlalchemy.url = postgresql://princeak:dRKH5CsZC6Lm4RMggNkjmkr79g25T23u@dpg-d0cacsi4d50c73but2tg-a/powergrid
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
