--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ pydantic_core==2.33.1
 python-dotenv==1.1.0
 python-jose==3.5.0
 python-multipart==0.0.20
+pytz==2025.2
 PyYAML==6.0.2
 rsa==4.9.1
 six==1.17.0
